--- a/05-deployment/05-churn-model.ipynb
+++ b/05-deployment/05-churn-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "062420ad-06e5-4d24-89a5-4f62472b28db",
    "metadata": {},
    "outputs": [],
@@ -21,8 +21,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33409898-384c-4be0-af69-c5910a46b224",
+   "metadata": {},
+   "source": [
+    "data preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "ed4be654-f5d0-484c-891f-47ec8bc7a073",
    "metadata": {},
    "outputs": [],
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "f7ef9b33-4caf-4635-a6b8-fb1b250fc366",
    "metadata": {},
    "outputs": [],
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "cf462c70-b49b-48dd-807b-cf890e1a6f68",
    "metadata": {},
    "outputs": [],
@@ -83,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "a6d19bbe-ce5c-4b42-b334-c58c4906ab2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(df_train, y_train, C=1.0):\n",
-    "    dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
+    "    dicts_train = df_train[categorical + numerical].to_dict(orient='records')\n",
     "\n",
     "    dv = DictVectorizer(sparse=False)\n",
-    "    X_train = dv.fit_transform(dicts)\n",
+    "    X_train = dv.fit_transform(dicts_train)\n",
     "\n",
     "    model = LogisticRegression(C=C, max_iter=5000)\n",
     "    model.fit(X_train, y_train)\n",
@@ -102,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "36024529-4052-4da4-8862-c005dcca738a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(df, dv, model):\n",
-    "    dicts = df[categorical + numerical].to_dict(orient='records')\n",
+    "    dicts_predict = df[categorical + numerical].to_dict(orient='records')\n",
     "\n",
-    "    X = dv.transform(dicts)\n",
+    "    X = dv.transform(dicts_predict)\n",
     "    y_pred = model.predict_proba(X)[:, 1]\n",
     "\n",
     "    return y_pred"
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "id": "8e67cc4c-3796-4922-881a-f77dbd9e0757",
    "metadata": {},
    "outputs": [],
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "id": "bdbad40c-5972-4025-bf11-83fcb76b8a48",
    "metadata": {},
    "outputs": [
@@ -144,8 +152,10 @@
    "source": [
     "kfold = KFold(n_splits=n_splits, shuffle=True, random_state=1)\n",
     "\n",
+    "# for C in [0.01, 0.1, 1, 10]:\n",
+    "    \n",
     "scores = []\n",
-    " \n",
+    "\n",
     "for train_idx, val_idx in kfold.split(df_full_train):\n",
     "    df_train = df_full_train.iloc[train_idx]\n",
     "    df_val = df_full_train.iloc[val_idx]    \n",
@@ -164,7 +174,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 89,
+   "id": "70fd02f7-774e-4b2e-8bda-7c0af387efbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8518166985660947"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "id": "76018b64-95bc-4ab9-bfe9-6ef996b5a6a5",
    "metadata": {},
    "outputs": [
@@ -178,7 +209,7 @@
        " 0.8518166985660947]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "id": "0f350e77-4eff-4d9b-bb40-e1f273eb94bc",
    "metadata": {},
    "outputs": [
@@ -199,7 +230,7 @@
        "0.8584032088573997"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "id": "6210dbfb-38a9-4175-8196-71f28e198536",
    "metadata": {},
    "outputs": [],
@@ -233,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "id": "5b66de99-fcd7-4617-a5e3-1ecf87cdaadf",
    "metadata": {},
    "outputs": [
@@ -243,7 +274,7 @@
        "'model_C=1.0.bin'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 94,
    "id": "edc0bd04-200b-4ddb-b95b-428cdd4fc07e",
    "metadata": {},
    "outputs": [],
@@ -267,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 95,
    "id": "57325234-f9cf-43d9-b26b-d1c95a330977",
    "metadata": {},
    "outputs": [],
@@ -275,22 +306,6 @@
     "with open(output_file, 'wb') as f_out: # 'wb' means write-binary\n",
     "    pickle.dump((dv, model), f_out)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1acaceb-36d6-43cf-bf6a-7f9ae4f820a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4200750-da20-46f7-b8ed-8a45c64799d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -302,8 +317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "d3691c9d-d3c7-40fb-9f7e-2297c6f45981",
+   "execution_count": 96,
+   "id": "0c0e7960-75de-4cc6-8209-ffd37839c1c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "id": "0d0757a8-fe6d-4794-9503-d9207328bb27",
    "metadata": {},
    "outputs": [],
@@ -322,18 +337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 98,
    "id": "83ba5a1a-e9f0-4e30-bf97-1bfdf5e0102d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(output_file, 'wb') as f_out: # 'wb' means write-binary\n",
-    "    pickle.dump((dv, model), f_out)"
+    "with open(output_file, 'rb') as f_in: # 'wb' means write-binary\n",
+    "    dv, model = pickle.load(f_in)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 99,
    "id": "65dcee08-77f7-441c-b7bc-74ccd2d02182",
    "metadata": {},
    "outputs": [
@@ -343,7 +358,7 @@
        "(DictVectorizer(sparse=False), LogisticRegression(max_iter=5000))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 100,
    "id": "d0c159ec-fb86-4286-961b-2e7e218fae5d",
    "metadata": {},
    "outputs": [],
@@ -384,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 101,
    "id": "94d4f461-199e-4fd9-8c09-1d48c7999184",
    "metadata": {},
    "outputs": [],
@@ -394,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 102,
    "id": "83a9392c-0a03-4ce0-a9f1-d70ef8abb4df",
    "metadata": {},
    "outputs": [
@@ -408,7 +423,7 @@
        "         0.  ,  1.  ,  0.  ,  0.  ,  1.  ,  0.  ,  0.  ,  1.  , 29.85]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 103,
    "id": "4db629a6-ba47-4a5f-aadf-9543e01f0576",
    "metadata": {},
    "outputs": [
@@ -429,7 +444,7 @@
        "array([[0.48770029, 0.51229971]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 104,
    "id": "a4e00f21-aabe-4c46-b065-2e55401d3ff1",
    "metadata": {},
    "outputs": [
@@ -450,7 +465,7 @@
        "np.float64(0.512299708311887)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82a83be7-3675-4565-bf49-7827032dae9e",
+   "id": "2bf507a9-8e6c-493c-86d0-fd3d50567b92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -470,7 +485,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7edcde36-4cf7-4a8f-bd56-534c4fc059f4",
+   "id": "49f89c50-7fb1-4c70-a8fc-aa0f0dd92244",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7b95c28-c95a-4f5f-8fd2-0d8f589ae4f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66804032-d744-4cec-9967-815869008551",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96f2097-9a0b-4ee2-8baa-20b83f8abfd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "811d055f-d7d0-48dd-99e7-32ac77355672",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba8db9d8-8e62-465e-9102-195f8eaceeec",
    "metadata": {},
    "outputs": [],
    "source": []
